crates/forgejo-core/src/error/snapshots/forgejo_core__error__render__tests__snapshot_repo_not_resolved_shows_its_work.snap
---
source: crates/forgejo-core/src/error/render.rs
expression: "snap(ErrorKind::RepoNotResolved\n{\n    tried:\n    vec![Attempt::new(\"-R/--repo\", \"not given\"),\n    Attempt::new(\"FCLI_REPO / FORGEJO_REPO\", \"not set\"),\n    Attempt::new(\"git config remote.*.fcli-resolved\", \"no value\"),\n    Attempt::new(\"remote name scoring\",\n    \"no remote matched a configured host\"),],\n}, RequestCtx::default())"
---
error: could not determine the repository

  tried: -R/--repo — not given
         FCLI_REPO / FORGEJO_REPO — not set
         git config remote.*.fcli-resolved — no value
         remote name scoring — no remote matched a configured host

what to do:
  specify a repository or save a default for this checkout.
  1. fcli <command> -R owner/name
  2. fcli repo set-default  (remember it for this checkout)
  note: -R also accepts host/owner/name and a full URL.
