crates/forgejo-core/src/error/snapshots/forgejo_core__error__render__tests__snapshot_resource_not_found_on_a_collection_blames_no_identifier.snap
---
source: crates/forgejo-core/src/error/render.rs
expression: "snap(ErrorKind::ResourceNotFound\n{\n    kind: \"pull request\", id: String::new(), slug:\n    Some(\"perf3ct/fjo\".into()), server_message:\n    Some(\"could not find 'no-such-branch' to be a commit, branch or tag\".into(),),\n}, c)"
---
error: referenced resource not found in perf3ct/fjo (HTTP 404)

  request:     POST /api/v1/repos/perf3ct/fjo/pulls
  repository:  perf3ct/fjo  (found)
  server says: could not find 'no-such-branch' to be a commit, branch or tag

what to do:
  this request has no pull request identifier. Check referenced branch, tag, or
  user names.
  1. correct the value named in the server message, then retry
  2. fjo api repos/perf3ct/fjo/branches --jq '.[].name'
  3. fjo api repos/perf3ct/fjo/tags --jq '.[].name'
  note: when creating a pull request, check --head and --base.
