crates/forgejo-core/src/error/snapshots/forgejo_core__error__render__tests__snapshot_state_conflict_from_a_405.snap
---
source: crates/forgejo-core/src/error/render.rs
expression: "snap(ErrorKind::StateConflict\n{\n    resource: Some(\"pull request 4212\".into()), state: None, server_message:\n    \"The head branch is behind the base branch\".into(),\n}, c)"
---
error: operation unavailable in the current state of pull request 4212

  request:     POST /api/v1/repos/perf3ct/fjo/pulls/4212/merge
  resource:    pull request 4212
  server says: The head branch is behind the base branch

what to do:
  the current state prevents this operation. Check the server message above.
  1. fjo api -X POST repos/perf3ct/fjo/pulls/4212/merge  (read the current state)
  2. resolve the reported state conflict, then retry
  note: changing token scopes does not resolve a state conflict.
