crates/forgejo-core/src/error/snapshots/forgejo_core__error__render__tests__snapshot_state_conflict_known_locally.snap
---
source: crates/forgejo-core/src/error/render.rs
expression: "snap(ErrorKind::StateConflict\n{\n    resource: Some(\"pull request 4212\".into()), state: Some(\"closed\".into()),\n    server_message: String::new(),\n}, RequestCtx::default())"
---
error: operation unavailable: pull request 4212 is closed

  resource:    pull request 4212
  state:       closed
  server says: (the server sent no message)

what to do:
  the current state prevents this operation. Check the server message above.
  1. fcli auth status  (read the current state)
  2. resolve the reported state conflict, then retry
  note: changing token scopes does not resolve a state conflict.
