crates/forgejo-core/src/error/snapshots/forgejo_core__error__render__tests__snapshot_two_factor_required.snap
---
source: crates/forgejo-core/src/error/render.rs
expression: "snap(ErrorKind::TwoFactorRequired { host: \"git.example.org\".into() }, ctx())"
---
error: git.example.org requires a two-factor code

  request:    POST /api/v1/repos/perf3ct/fjo/issues
  host:       git.example.org
  token from: the OS keyring, entry fjo:git.example.org

what to do:
  password authentication requires a two-factor code for this account.
  1. fjo --otp 123456 <command>  (the current code)
  2. fjo auth login --host git.example.org  (store a token instead)
  note: API tokens do not require a two-factor code.
