crates/forgejo-core/src/error/snapshots/forgejo_core__error__render__tests__snapshot_unknown_json_field.snap
---
source: crates/forgejo-core/src/error/render.rs
expression: "snap(ErrorKind::UnknownJsonField\n{\n    given: \"titel\".into(), available:\n    vec![\"number\".into(), \"title\".into(), \"state\".into(), \"url\".into()],\n    suggest: Some(\"title\".into()),\n}, RequestCtx::default())"
---
error: unknown --json field: titel

  asked for:    titel
  did you mean: title
  available:    number, title, state, url

what to do:
  use --json for top-level fields and --jq for nested fields.
  1. fjo pr list --json  (list available fields)
  2. fjo pr list --jq '.[].head.ref'  (select a nested field)
